# farman-plugin-lzh

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
farman-sdk/: README.md
farman-sdk/core/: ArchiveEntryName.cpp  ArchiveEntryName.h  IArchivePlugin.cpp  IArchivePlugin.h
src/: LzhArchivePlugin.cpp  LzhArchivePlugin.h
